add validation; add avatars upload

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -287,7 +287,7 @@ form .button, .calendar-container .button, .edit-buttons .button {
   
 }
 
-pairsessionall, pairsessionuser, pairsessionedit {
+pairsessionall, pairsessionuser, pairsessionedit, lastevent {
   display: block;
   overflow: hidden;
   margin-bottom: 20px;
