--- a/app/assets/stylesheets/contact_form.css.scss
+++ b/app/assets/stylesheets/contact_form.css.scss
@@ -25,6 +25,10 @@
 
   .session-full {
     border-bottom: 1px solid $background-color;
+
+    .when {
+      float: right;
+    }
   }
 
   .name {
