--- a/app/assets/templates/new_pair_session.html
+++ b/app/assets/templates/new_pair_session.html
@@ -16,14 +16,16 @@
     <div class='field'>
       <label>start time:</label>
       <div class='control'>
-        <input class='start-time' type='text' value='' ng-model='newSession.start_time'></input>
+        <!-- <input class='start-time' type='text' value='' ng-model='newSession.start_time'></input> -->
+        <input class='start-time' timepicker time='newSession.start_time' type='text' value=''></input>
       </div>
     </div>
 
     <div class='field'>
       <label>end time:</label>
       <div class='control'>
-        <input class='end-time' type='text' value='' ng-model='newSession.end_time'></input>
+        <!-- <input class='end-time' type='text' value='' ng-model='newSession.end_time'></input> -->
+        <input class='end-time' timepicker time='newSession.end_time' type='text' value=''></input>
       </div>
     </div>
 
