--- a/app/assets/templates/pairsession_edit.erb
+++ b/app/assets/templates/pairsession_edit.erb
@@ -30,14 +30,14 @@
         <div class='field'>
           <label>start time:</label>
           <div class='control'>
-            <input class='start-time' type='text' value='' ng-model='session.start'></input>
+            <input class='start-time' timepicker time='session.start' type='text' value=''></input>
           </div>
         </div>
 
         <div class='field'>
           <label>end time:</label>
           <div class='control'>
-            <input class='end-time' type='text' value='' ng-model='session.end'></input>
+            <input class='end-time' timepicker time='session.end' type='text' value=''></input>
           </div>
         </div>
 
