--- a/app/views/pairsessions/index.erb
+++ b/app/views/pairsessions/index.erb
@@ -10,7 +10,7 @@
 
   <ul class="sessions">
     <li class="session-full" ng-repeat="session in sessions">
-      <pairsessionall session='session'></pairsessionall>
+      <pairsessionall opensContactForm session='session'></pairsessionall>
       <div class="separator-white"></div>
     </li>
 </div>
