--- a/app/assets/stylesheets/pairsessions_edit.css.scss
+++ b/app/assets/stylesheets/pairsessions_edit.css.scss
@@ -55,6 +55,10 @@
         margin-bottom: 20px;
       }
 
+      .start-time, .end-time {
+        cursor: pointer;
+      }
+
       .field label {
         float: left;
         width: 100px;
