add validation or editing pairsessions; add signin right after signup

--- a/app/assets/stylesheets/pairsessions_user.css.scss
+++ b/app/assets/stylesheets/pairsessions_user.css.scss
@@ -8,6 +8,10 @@
     color: $light-blue;
   }
 
+  .session-with-avatar .information {
+    width: 800px;
+  }
+
   .edit-profile {
     font-size: $medium-font;
     color: $light-blue;
