--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -14,7 +14,6 @@
   <div class="right">
     <%= f.text_field :skills, placeholder: 'skills' %>
     <%= f.text_area :brief_info, placeholder: 'brief information', rows: 12 %>
-    <!--<%= f.file_field :image %>-->
   </div>
   <div class="clear"></div>
   <div class="avatar-container">
@@ -32,27 +31,30 @@
 <% end %>
 
 <script type="text/javascript">
-  function getFile(){
-     document.getElementById("image").click();
-   }
+  function getFile() {
+    document.getElementById("image").click();
+  }
 
-   window.canSubmit = true;
-   function showFilename () {
-     var selectedFile = $('#image').get(0).files[0];
+  window.canSubmit = true;
+  function showFilename () {
+    var selectedFile = $('#image').get(0).files[0];
 
-     window.canSubmit = !((selectedFile.size / 1000000) > 2 || selectedFile.type.indexOf("image") == -1)
-     if(window.canSubmit) {
-      $('.avatar-name').text(selectedFile.name).show();
-     }
-     else {
-      $('.avatar-name').text('avatar has a wrong type or too big to upload').show();
-     }
-   }
+    if(_.isUndefined(selectedFile)) {
+      $('.avatar-name').text('').show();
+      window.canSubmit = true;
+      return;
+    }
 
-   function sub(obj){
-      // var file = obj.value;
-      // var fileName = file.split("\\");
-      // document.getElementById("avatar-button").innerHTML = fileName[fileName.length-1];
+    window.canSubmit = !((selectedFile.size / 1000000) > 2 || selectedFile.type.indexOf("image") == -1)
+      if(window.canSubmit) {
+        $('.avatar-name').text(selectedFile.name).show();
+      }
+      else {
+        $('.avatar-name').text('avatar has a wrong type or too big to upload').show();
+      }
+    }
+
+    function sub(obj){
       if(window.canSubmit) {
         $("#new_user").submit();
       }
