--- a/app/assets/templates/contact_window.erb
+++ b/app/assets/templates/contact_window.erb
@@ -8,7 +8,7 @@
       <img src="{{pairsession.user_avatar}}" alt="">
     </div>
     <div class="information">
-      <p class="name"> {{pairsession.username}} <span>GMT-5:00 Eastern Time (US & Canada)</span></p>
+      <p class="name"> {{pairsession.username}} <span>{{pairsession.time_zone}}</span></p>
       <p class="brief-information">{{pairsession.note}}</p>
       <p class="bottom-info-label"><span class="highlighted-text">technologies: </span>&nbsp {{pairsession.technologies}}</p>
       <p class="when"><span class="icon-clock"></span> &nbsp {{pairsession.date}} {{pairsession.start}} - {{pairsession.end}}</p>
