--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -4,7 +4,7 @@
       <%= image_tag @user.image_url %>
     </div>
     <div class="information">
-      <p class="name"><%= @user.username %> <span>GMT-5:00 Eastern Time (US & Canada)</span> <% if @show_edit %> &nbsp <%= link_to "edit", edit_user_path(current_user) %><% end %></p>
+      <p class="name"><%= @user.username %> <span><%= @user.time_zone %></span> <% if @show_edit %> &nbsp <%= link_to "edit", edit_user_path(current_user) %><% end %></p>
       <p class="brief-information"><%= @user.brief_info %> </p>
       <p class="bottom-info-label"><span class="highlighted-text">skills: </span>&nbsp <%= @user.skills %></p>
     </div>
