--- a/app/assets/templates/new_pair_session.html
+++ b/app/assets/templates/new_pair_session.html
@@ -28,7 +28,7 @@
     </div>
 
     <ul class="edit-buttons">
-      <input type="button" class="button" value='save' ng-click="saveNewSession()">
+      <input type="button" class="button" value='save' ng-click="saveNewSession($event)">
       <input type="button" class="button" value='cancel' ng-click="switchToCreateMode(false)">
     </ul>
   </form>
