--- a/app/views/user_pairsessions/index.erb
+++ b/app/views/user_pairsessions/index.erb
@@ -8,7 +8,7 @@
   <div class="calendar-container">
     <calendar daychange='loadDaySessions()' userid='<%= current_user.id %>'></calendar>
     <div class="cloud">Select a date and create or edit your pairsessions</div>
-    <input type="button" class="button" value="Create" ng-click="switchToCreateMode(true)">
+    <input type="button" class="button" value="Create" ng-show="!createSessionMode" ng-click="switchToCreateMode(true)">
   </div>
 
   <ul class="sessions">
@@ -18,6 +18,7 @@
 
     <div class="separator-white" ng-show="createSessionMode"></div>
 
+    <div class="no-session" ng-show="sessions.length == 0 && !createSessionMode">no sessions</div>
     <li class="session-view" ng-repeat="session in sessions">
       <pairsessionedit session='session' deleteSession='deleteSession(session)' saveChanges='saveChanges(session)'></pairsessionedit>
       <div class="separator-white"></div>
