--- a/app/assets/templates/last_event.erb
+++ b/app/assets/templates/last_event.erb
@@ -6,7 +6,7 @@
       <img ng-src='{{event.user_avatar}}'/>
     </div>
     <div class="information">
-      <p class="name"><a href="{{event.userprofile_url}}">{{event.username}}</a> <span>{{event.time_zone}}</span></p>
+      <p class="name"><a href="{{event.userprofile_url}}">{{event.username}}</a> <span>{{event.timezone}}</span></p>
       <p class="brief-information">{{event.note}}</p>
       <p class="bottom-info-label"><span class="highlighted-text">technologies: </span>&nbsp {{event.technologies}}</p>
       <p class="when"><span class="icon-clock"></span> &nbsp {{event.date}} {{event.start}} - {{event.end}}</p>
@@ -22,7 +22,7 @@
       <img ng-src="{{event.user_avatar}}">
     </div>
     <div class="information">
-      <p class="name"><a href="{{event.userprofile_url}}">{{event.username}}</a> <span>{{event.time_zone}}</span></p>
+      <p class="name"><a href="{{event.userprofile_url}}">{{event.username}}</a> <span>{{event.timezone}}</span></p>
       <p class="brief-information">{{event.brief_info || 'no information'}}</p>
       <p class="bottom-info-label"><span class="highlighted-text">skills: </span>&nbsp {{event.skills || 'no information'}}</p>
     </div>
