--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -18,7 +18,7 @@
   </div>
 
   <div class="right">
-    <%= f.text_field :time_zone, placeholder: 'timezone'%>
+    <%= f.text_field :timezone, placeholder: 'timezone'%>
     <%= f.text_area :brief_info, placeholder: 'brief information', rows: 8 %>
   </div>
   <div class="clear"></div>
