--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -13,7 +13,7 @@
 
   <div class="right">
     <%= f.text_field :skills, placeholder: 'skills' %>
-    <%= f.text_field :time_zone, placeholder: 'timezone', validate: true %>
+    <%= f.text_field :timezone, placeholder: 'timezone', validate: true %>
     <%= f.text_area :brief_info, placeholder: 'brief information', rows: 7 %>
   </div>
   <div class="clear"></div>
