--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -4,7 +4,7 @@
       <%= image_tag @user.image_url %>
     </div>
     <div class="information">
-      <p class="name"><%= @user.username %> <span><%= @user.time_zone %></span> <% if @show_edit %> &nbsp <%= link_to "edit", edit_user_path(current_user) %><% end %></p>
+      <p class="name"><%= @user.username %> <span><%= @user.timezone %></span> <% if @show_edit %> &nbsp <%= link_to "edit", edit_user_path(current_user) %><% end %></p>
       <p class="brief-information">
         <%= @user.brief_info.empty? && 'no information' || @user.brief_info %>
       </p>
@@ -16,7 +16,7 @@
 <div class="user-sessions" ng-app="letspair" ng-controller="PairsessionsUserCtrl">
   <input class="user-id" type="hidden" ng-init='userId= <%= @user.id %>'/>
   <div class="calendar-container">
-    <calendar daychange='loadDaySessions()' ></calendar>
+    <calendar daychange='loadDaySessions()' userid='<%= @user.id %>'></calendar>
 
     <% if @show_edit %>
       <%= link_to 'edit', user_pairsessions_path(current_user.username), class: 'edit-sessions' %>
