--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -3,6 +3,10 @@
     <%= image_tag "logo.png" %>
   </div>
 
+  <div class='github-banner'>
+    <a href="https://github.com/spkenny/letspair">Available on github</a>
+  </div>
+
   <blockquote>
     Wow. This #pairwithme thing @avdi started is
     really deepening the sense of community I feel.
