--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -4,10 +4,8 @@
 
   <ul class="users">
     <div class="no-users" ng-show="users.length == 0">no users</div>
-    <li class="session-full" ng-repeat="user in users | startFrom:currentPage*pageSize | limitTo:pageSize">
+    <li class="user-full" ng-repeat="user in users | startFrom:currentPage*pageSize | limitTo:pageSize">
       <userpartial opensContactForm user='user'></userpartial>
-<!--       <usersall opensContactForm user='user'></usersall>
- -->
       <div class="separator-white"></div>
     </li>
   </ul>
